--- a/backend/reactdjango/static/profile.css
+++ b/backend/reactdjango/static/profile.css
@@ -70,8 +70,8 @@ p{
         margin-left: 0;
     }
     span{
-        font-size: 17px;
-        font-weight: 900;
+        font-size: 16px;
+        font-weight: bold;
     }
     .profile-credentials{
         text-align: left;
