--- a/backend/reactdjango/static/rentaldetails.css
+++ b/backend/reactdjango/static/rentaldetails.css
@@ -4,14 +4,75 @@
     margin-right: auto;
     margin-top: 53px;
 }
-.image-container{
+
+.swiper-parent-container {
     width: 40%;
     height: 300px;
-    
-    display: inline-block;
-    vertical-align: top;
+    overflow: hidden; /* Ensure swiper content stays within container */
+    position: relative; /* Needed for absolutely positioned elements inside */
+}
+
+.swiper-container {
+    width: 100%;
+    height: 80%;
+    display: flex;
     overflow: hidden;
 }
+
+.swiper-wrapper {
+    width: auto; /* Adjust width to fit content */
+    height: 100%;
+    display: flex; /* Ensure horizontal layout */
+}
+
+.swiper-slide {
+    flex: 0 0 auto; /* Allow slides to shrink if necessary */
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.swiper-button-prev {
+    left: 10px;
+}
+
+.swiper-button-next {
+    right: 10px;
+}
+
+.play-button {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    padding: 5px 10px;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 10;
+    width: 30%;
+}
+
+
 .image-container img{
     max-width: 100%;
     object-fit: cover;
@@ -102,8 +163,7 @@
 .photo img{
     max-width: 100%;
     max-height: 100%;
-    object-fit: cover;
-    
+    object-fit: cover;   
 }
 
 .details{
