--- a/backend/reactdjango/templates/post-rentals.html
+++ b/backend/reactdjango/templates/post-rentals.html
@@ -15,7 +15,7 @@
     <form action="/post_rentals" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p}}
-       
+        <input type="file" name="photos" accept="image/*" multiple>
         <button type="submit">Post</button>
     </form>
  </div>  
