--- a/backend/reactdjango/templates/buyproperty.html
+++ b/backend/reactdjango/templates/buyproperty.html
@@ -60,7 +60,7 @@
         <a href="/view_property_on_sale_details/{{property.id}}">
             <div class="property-container">
                 <div class="photo-container">
-                     <img src="{{property.photos.url}}">
+                     <img src="{{property.main_photo.url}}">
                 </div>
                 <div class="property-details">
                      <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{property.location}}</p>
