--- a/backend/reactdjango/templates/rentaldetails.html
+++ b/backend/reactdjango/templates/rentaldetails.html
@@ -117,7 +117,7 @@
                 <div class="houses-container">
             
                     <div class="photo">
-                         <img src="{{rental.photos.url}}">
+                         <img src="{{rental.main_image.url}}">
                     </div>
                     <div class="details">
                          <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{rental.location}}</p>
