--- a/backend/reactdjango/static/buyproperty.css
+++ b/backend/reactdjango/static/buyproperty.css
@@ -112,8 +112,8 @@ p{
 }
 
 .photo-container img{
-    max-width: 100%;
-    max-heidght: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
