--- a/backend/reactdjango/static/rentaldetails.css
+++ b/backend/reactdjango/static/rentaldetails.css
@@ -8,6 +8,8 @@
 .swiper-parent-container {
     width: 40%;
     height: 300px;
+    margin-right: 10px;
+    display: inline-block;
     overflow: hidden; /* Ensure swiper content stays within container */
     position: relative; /* Needed for absolutely positioned elements inside */
 }
@@ -33,8 +35,8 @@
 
 .swiper-slide img {
     width: 100%;
-    height: 100%;
     object-fit: cover;
+    height: 100%;
 }
 
 .swiper-button-prev,
@@ -73,11 +75,7 @@
 }
 
 
-.image-container img{
-    max-width: 100%;
-    object-fit: cover;
-    max-height: 100%;
-}
+
 .video-container{
     width: 40%;
     display: inline-block;
@@ -161,8 +159,8 @@
     overflow: hidden;
 }
 .photo img{
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;   
 }
 
@@ -224,11 +222,48 @@ a{
         width: 100%;
         margin-top: 53px;
     }
-    .image-container{
-        width: 99%;
-        height: auto;
-
+    #scrollToTopBtn {
+        bottom: 10px; /* Place the button 20px from the bottom */
+        right: 20px;
+        font-size: 15px;
     }
+    .swiper-parent-container {
+        width: 99%;
+        height: 250px;
+    }
+    .swiper-container {
+        height: 85%; 
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    position: absolute;
+    top: 30%;
+    transform: translateY(-50%);
+    width: 20px !important;
+    height: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 16px !important;;
+    cursor: pointer;
+    z-index: 10;
+}
+.swiper-button-next:after, .swiper-button-prev:after {font-size: 16px !important;}
+.play-button {
+    position: absolute;
+    bottom: 1px;
+    left: 10px;
+    padding: 5px 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    
+}
+
+  
     .image-container img{
         width: 100%;
     }
