--- a/backend/reactdjango/static/rentals.css
+++ b/backend/reactdjango/static/rentals.css
@@ -118,8 +118,8 @@ form{
 }
 
 .photo img{
-    max-width: 100%;
-    max-heiyght: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
