--- a/backend/reactdjango/templates/on_sale_property_details.html
+++ b/backend/reactdjango/templates/on_sale_property_details.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="{% static 'on_sale_property_details.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <title>property details</title>
     <style>
         .buy-property{
@@ -19,8 +23,33 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="image-container">
-            <img src="{{on_sale_property.photos.url}}" alt="">
+        <div class="swiper-parent-container">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <!-- Main image slide -->
+                    <div class="swiper-slide">
+                        <img src="{{ on_sale_property.main_photo.url }}" alt="">
+                    </div> 
+                     
+                    <!-- Other images slides -->
+                    {% for photo in photos %}
+                    <div class="swiper-slide">
+                        <img src="{{ photo.image.url }}" alt="Product Image">
+                    </div>
+                    {% endfor %}
+                </div>
+        
+                <!-- Custom pagination -->
+                <div class="swiper-pagination"></div>
+                
+                <!-- Navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+                
+                <button class="play-button"><i class="fa fa-play" aria-hidden="true"></i>
+                </button>
+            </div>
         </div>
 
         {% if on_sale_property.video %}
@@ -86,10 +115,11 @@
         <h3 style="text-align: center;">Other reated properties</h3>
         <div class="property-in-the-area">
             {% for property in related_property %}
+            <a href="/view_property_on_sale_details/{{property.id}}">
             <div class="property-container">
             
                 <div class="photo">
-                     <img src="{{property.photos.url}}">
+                     <img src="{{property.main_photo.url}}">
                 </div>
                 <div class="details">
                      <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{property.location}}</p>
@@ -103,10 +133,17 @@
                 </div>
             
              </div>
+
+            </a>
              {% endfor %}
              {% endif %}
         </div>
-      
+
+        <button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+
+        <script src="{% static 'home-btn.js'%}"></script>
+
+        <script src="{% static 'swipper.js'%}"></script>  
     </div>
     {% endblock %}
 </body>
