--- a/backend/reactdjango/templates/sellproperty.html
+++ b/backend/reactdjango/templates/sellproperty.html
@@ -15,7 +15,7 @@
     <form action="/sell_property" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p}}
-       
+        <input type="file" name="photos" accept="image/*" multiple>
         <button type="submit">Post</button>
     </form>
  </div>  
