--- a/backend/reactdjango/templates/rentaldetails.html
+++ b/backend/reactdjango/templates/rentaldetails.html
@@ -63,7 +63,7 @@
         
             <div class="about-house">
                 <p>House type : {{rental.size}}</p>
-                <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{rental.location}}</p>
+                <p>Location :  {{rental.location}}</p>
                 <p>Rent per month : ksh {{rental.price}}</p>
                 <p>Deposit : {{rental.deposit}}</p>
                 <p>Water cost : {{rental.water_fee}}</p>
