--- a/backend/reactdjango/static/rentaldetails.css
+++ b/backend/reactdjango/static/rentaldetails.css
@@ -47,12 +47,16 @@
     width: 30px;
     height: 30px;
     background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
+   
     font-size: 24px;
     cursor: pointer;
     z-index: 10;
+   
 }
-
+.swiper-button-next:after, .swiper-button-prev:after {
+   
+    color: white;
+}
 .swiper-button-prev {
     left: 10px;
 }
