--- a/backend/reactdjango/templates/header.html
+++ b/backend/reactdjango/templates/header.html
@@ -60,6 +60,7 @@
                <a href="">About</a>
                <a href="https://maps.app.goo.gl/eKKyjDRfYyHFNHXJ8" target="_blank">Location</a>
                <a href="">Terms and Conditions</a>
+               <a href="/login">Post property</a>
             </div>
    
            <div class="support">
