--- a/backend/reactdjango/templates/register.html
+++ b/backend/reactdjango/templates/register.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="login_container">
+    <div class="register-container">
         <h3 style="padding-top: 15px; color: black; text-align: center;">register here</h3>
                
             <div class="user-credentials">
