--- a/backend/reactdjango/static/login.css
+++ b/backend/reactdjango/static/login.css
@@ -1,5 +1,7 @@
-
-.big_container{  
+body{
+    background-color: rgb(175, 172, 172);
+}
+.login-container{  
     background-color: white;
     cursor: pointer;
     width: 50%;
@@ -43,9 +45,7 @@
 .register{
     color: #358f02;
 }
-body{
-    background-color: rgb(175, 172, 172);
-}
+
 
 input[type=submit]{
     width: 100%;
@@ -54,9 +54,8 @@ input[type=submit]{
     color: white;
 
 }
-@media (max-width: 768px) {
-
-    .big_container{ 
+ @media (max-width: 768px) {
+    .login-container{ 
         width: 100%;
         margin-top: 0;
         margin-bottom: 0;
