--- a/backend/reactdjango/templates/login.html
+++ b/backend/reactdjango/templates/login.html
@@ -4,12 +4,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="{%static 'login.css'%}">
+<link rel="stylesheet" href="{% static 'login.css' %}">
 <title>login</title>
 </head>
 <body>
     
-<div class="big_container">
+<div class="login-container">
     <h3>login here</h3>
         <div class="credentials">
             <form method="POST" action="login">
