--- a/backend/reactdjango/templates/register.html
+++ b/backend/reactdjango/templates/register.html
@@ -33,23 +33,19 @@
                 </form>  
             </div>
     
-    
+            {% for message in messages %}
+            <h4 class="{% if message.tags == 'error' %}message-error{% elif message.tags == 'success' %}message-success{% endif %}">
+                    {{ message }}
+                </h4>
+            {% endfor %}
+
             <div class="login-account">
                 <h5>
                     Already have an account?
                 </h5>
                 <a href="/login">login here</a>
             </div>
-    
-            
-            <!-- <div class="msg">
-                {% for message in messages%}
-                {{message}}
-                {% endfor %}
-            </div>
-                 
-             -->
-            
+       
     </div>  
                
 </body>
