--- a/backend/reactdjango/staticfiles/register.css
+++ b/backend/reactdjango/staticfiles/register.css
@@ -1,15 +1,15 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: rgb(207, 204, 204);
+    background-color: rgb(175, 172, 172);
 }
-.login_container{ 
+.register-container{ 
     background-color:white;
     cursor: pointer;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
+    margin-top: 20px;
     border-radius: 5px;
     margin-bottom: 30px;
     display: flex;
@@ -42,36 +42,37 @@ input[type=submit]{
     text-align: center;
     margin-bottom: 30px;
 }
+a{
+    text-decoration: none;
+}
 .login-account a {
     color: green;
 }
-.msg{
+.message-success {
+    color: green;
+}
+.message-error {
     color: red;
-    text-align: center;
-
 }
 
 
-
-.submit input{
-    background-color: rgb(15, 231, 15);
-    color: white;
-    width: 80px;
-    height: 28px;
-    border-radius: 3px;
-   font-weight: bold;
-    border: none;
-}
 @media (max-width: 768px) {
-    .login_container{ 
+    body{
+        background-color: white;
+    }
+    .register-container{ 
         width: 100%;
         margin-bottom: 0;
         margin-top: 0;
-        height: 100vh;
+        height: 90vh;
     }
     .user-credentials input{
         height: 20px;
     }
-
-
+    .user-credentials input {
+        margin-bottom: 10px;
+    }
+    input[type=submit]{
+     height: 30px;
+    }
 }
