--- a/backend/reactdjango/staticfiles/rentaldetails.css
+++ b/backend/reactdjango/staticfiles/rentaldetails.css
@@ -4,19 +4,82 @@
     margin-right: auto;
     margin-top: 53px;
 }
-.image-container{
+
+.swiper-parent-container {
     width: 40%;
     height: 300px;
-    
+    margin-right: 10px;
     display: inline-block;
-    vertical-align: top;
+    overflow: hidden; /* Ensure swiper content stays within container */
+    position: relative; /* Needed for absolutely positioned elements inside */
+}
+
+.swiper-container {
+    width: 100%;
+    height: 80%;
+    display: flex;
     overflow: hidden;
 }
-.image-container img{
-    max-width: 100%;
-    object-fit: cover;
-    max-height: 100%;
+
+.swiper-wrapper {
+    width: auto; /* Adjust width to fit content */
+    height: 100%;
+    display: flex; /* Ensure horizontal layout */
 }
+
+.swiper-slide {
+    flex: 0 0 auto; /* Allow slides to shrink if necessary */
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.5);
+   
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 10;
+   
+}
+.swiper-button-next:after, .swiper-button-prev:after {
+   
+    color: white;
+}
+.swiper-button-prev {
+    left: 10px;
+}
+
+.swiper-button-next {
+    right: 10px;
+}
+
+.play-button {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    padding: 5px 10px;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 10;
+    width: 30%;
+}
+
+
+
 .video-container{
     width: 40%;
     display: inline-block;
@@ -29,7 +92,7 @@
 }
 .about{
     margin-top: 10px;
-    background-color: rgb(4, 221, 40);
+    background-color: rgb(10, 8, 20);
     width: 100%;
     border-radius: 3px;
 }
@@ -91,7 +154,7 @@
     border-top-right-radius: 5px;
     margin-bottom: 5px;
     margin-right: 5px;
-    border: 1px solid rgb(38, 216, 38);
+    border: 1px solid rgb(6, 5, 12);;
    
 }
 .photo {
@@ -100,10 +163,9 @@
     overflow: hidden;
 }
 .photo img{
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    
+    width: 100%;
+    height: 100%;
+    object-fit: cover;   
 }
 
 .details{
@@ -134,7 +196,7 @@ a{
     width: 100%;
     color: white;
     border: none;
-    background-color: rgb(38, 216, 38);
+    background-color: rgb(6, 5, 12);
     height: 43px;
     display: flex;
     justify-content: center;
@@ -164,11 +226,48 @@ a{
         width: 100%;
         margin-top: 53px;
     }
-    .image-container{
-        width: 99%;
-        height: auto;
-
+    #scrollToTopBtn {
+        bottom: 10px; /* Place the button 20px from the bottom */
+        right: 20px;
+        font-size: 15px;
     }
+    .swiper-parent-container {
+        width: 99%;
+        height: 250px;
+    }
+    .swiper-container {
+        height: 85%; 
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    position: absolute;
+    top: 30%;
+    transform: translateY(-50%);
+    width: 20px !important;
+    height: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-size: 16px !important;;
+    cursor: pointer;
+    z-index: 10;
+}
+.swiper-button-next:after, .swiper-button-prev:after {font-size: 16px !important;}
+.play-button {
+    position: absolute;
+    bottom: 1px;
+    left: 10px;
+    padding: 5px 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    
+}
+
+  
     .image-container img{
         width: 100%;
     }
@@ -196,7 +295,7 @@ a{
     .google-map{
         width: 10%;
         float: initial;
-        background-color: rgb(38, 216, 38);
+        background-color: rgb(10, 8, 20);
         padding-bottom: 10px;
     }
    
