--- a/backend/reactdjango/staticfiles/rentals.css
+++ b/backend/reactdjango/staticfiles/rentals.css
@@ -106,7 +106,7 @@ form{
     border-top-right-radius: 5px;
     margin-bottom: 5px;
     margin-right: 5px;
-    border: 1px solid rgb(38, 216, 38);
+    border: 1px solid rgb(6, 5, 12);
     vertical-align: top;
    
 }
@@ -118,8 +118,8 @@ form{
 }
 
 .photo img{
-    max-width: 100%;
-    max-heiyght: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -135,7 +135,7 @@ form{
     width: 100%;
     color: white;
     border: none;
-    background-color: rgb(38, 216, 38);
+    background-color: rgb(6, 5, 12);
     height: 43px;
     display: flex;
     justify-content: center;
