--- a/backend/reactdjango/templates/buyproperty.html
+++ b/backend/reactdjango/templates/buyproperty.html
@@ -70,7 +70,7 @@
                 </div>
      
                 <div class="property-cost">
-                     <p style="padding-top: 5px;">ksh {{ property.price|intcomma }} per month</p>
+                     <p style="padding-top: 5px;">ksh {{ property.price|intcomma }}</p>
                  
                 </div>
      
