--- a/backend/reactdjango/staticfiles/rentals.css
+++ b/backend/reactdjango/staticfiles/rentals.css
@@ -248,6 +248,7 @@ form{
         width: 100%;
         margin-top: 10px;
         margin-bottom: 10px;
+        position: relative;
     }
 
     .step-links ul a{
