--- a/backend/reactdjango/static/rentals.css
+++ b/backend/reactdjango/static/rentals.css
@@ -2,9 +2,6 @@
    padding: 0;
    margin: 0;
 }
-body{
-    background-color: rgb(235, 225, 225);
-}
 
 .rent-property{
    display: none; 
@@ -17,12 +14,9 @@ body{
     position: relative;
 }
 
-.main-container a{
-    color: black;
-}
+
 
 .search-container{
-    background-color: white;
     width: 60%;
     height: auto;
     /* box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5); */
@@ -37,14 +31,13 @@ body{
 }
 
 .adverts{
-    background-color: rgb(11, 10, 27);
+    background-color: rgb(32, 31, 31);
     color: white;
     display: inline-block;
     margin-left: 10px;
     margin-top: 10px;
     vertical-align: top;
     width: 35%;
-    font-size: 17px;
     border-radius: 3px;
 }
 p{
@@ -97,17 +90,39 @@ form{
     
 }
 
+a.dark-mode {
+    color: white;
+}
 
+.dark-mode .houses-container{
+    background-color: rgb(32, 31, 31);
+    color: white;
+}
+.dark-mode .search-container{
+    background-color: rgb(32, 31, 31);
+    color: white;
+}
+.dark-mode .cost{
+    background-color: rgb(32, 31, 31);
+    color: white;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
 .houses-container{
-    background-color: white;
     width: 24%;
     display: inline-block;
     border-top-left-radius: 5px; /* Adjust the radius value as needed */
     border-top-right-radius: 5px;
     margin-bottom: 5px;
     margin-right: 5px;
-    border: 1px solid rgb(6, 5, 12);
     vertical-align: top;
+    box-shadow:  3px 0 3px rgba(0, 0, 0, 0.5),/* right */
+    /* 0 -5px 5px rgba(0, 0, 0, 0.5), Top side */
+    0 3px 3px rgba(0, 0, 0, 0.5); /* Bottom side */
+    /* -5px 0 5px rgba(0, 0, 0, 0.5), Left side  left*/
+
    
 }
 .photo {
@@ -132,10 +147,10 @@ form{
     margin-right: auto;
 }
 .cost{
+    background-color: rgb(10, 10, 10);
     width: 100%;
     color: white;
     border: none;
-    background-color: rgb(6, 5, 12);
     height: 43px;
     display: flex;
     justify-content: center;
@@ -206,6 +221,15 @@ form{
         bottom: 10px; /* Place the button 20px from the bottom */
         right: 20px;
         font-size: 15px;
+    }
+    body{
+        font-size: 15px;
+    }
+    label{
+        font-size: 16px;
+    }
+    .moon{
+        margin-right: 10px;
     }
     .main-container{
         width: 100%;
