--- a/backend/reactdjango/static/search_property_on_sale.css
+++ b/backend/reactdjango/static/search_property_on_sale.css
@@ -9,15 +9,28 @@
     margin-top: 53px;
 }
 
+a.dark-mode {
+    color: white;
+}
+
+.dark-mode .property-container{
+    background-color: rgb(32, 31, 31);
+    color: white;
+}
+
+.dark-mode .cost{
+    background-color: rgb(32, 31, 31);
+    color: white;
+}
+
+
 .property-container{
-    background-color: white;
     width: 24%;
     display: inline-block;
     border-top-left-radius: 5px; /* Adjust the radius value as needed */
     border-top-right-radius: 5px;
     margin-bottom: 5px;
     margin-right: 5px;
-    border: 1px solid rgb(6, 5, 12);
     vertical-align: top;
    
 }
@@ -52,7 +65,7 @@ a{
     width: 100%;
     color: white;
     border: none;
-    background-color: rgb(6, 5, 12);
+    background-color: rgb(10, 10, 10);
     height: 43px;
     display: flex;
     justify-content: center;
