--- a/backend/reactdjango/templates/search_property_on_sale.html
+++ b/backend/reactdjango/templates/search_property_on_sale.html
@@ -29,7 +29,7 @@
             </div>
      
             <div class="cost">
-             <p style="padding-top: 5px;">ksh {{property.price|intcomma }} per month</p>
+             <p style="padding-top: 5px;">ksh {{property.price|intcomma }}</p>
                  
             </div>
      
