--- a/backend/reactdjango/templates/rentals.html
+++ b/backend/reactdjango/templates/rentals.html
@@ -1,6 +1,13 @@
 {% extends 'header.html'%}
 {% load static %}
 {% load humanize %}
+{% block body_class %}
+    {% if dark_mode %}
+        dark-mode
+    {% else %}
+        light-mode
+    {% endif %}
+{% endblock %}
 {%block content%}
 <!DOCTYPE html>
 <html lang="en">
