--- a/backend/reactdjango/static/header.css
+++ b/backend/reactdjango/static/header.css
@@ -8,6 +8,9 @@ body{
     --dark-bg-color: rgb(10, 10, 10);
    
 }
+.moon{
+    cursor: pointer;
+}
 body.light-mode {
    
     background-color: var(--light-bg-color);
@@ -147,6 +150,9 @@ footer{
 }
 
 @media (max-width: 768px) {
+    .moon{
+        margin-right: 10px;
+    }
     .phone-contact , .your-location{
         display: none;
     }
