--- a/backend/reactdjango/static/on_sale_property_details.css
+++ b/backend/reactdjango/static/on_sale_property_details.css
@@ -85,9 +85,12 @@
     max-width: 100%;
     height: 300px;
 }
+.dark-mode .about{
+    background-color: rgb(32, 31, 31);
+}
 .about{
     margin-top: 10px;
-    background-color: rgb(10, 8, 20);
+    background-color:  rgb(7, 4, 19);
     width: 100%;
     border-radius: 3px;
 }
@@ -97,15 +100,19 @@
     margin-right: auto;
     color: white;
 }
+.dark-mode .Features{
+    background-color: rgb(32, 31, 31);
+}
 .Features{
-    width: 90%;
-    margin-left: 15px;
+    width: 100%;
+    
 }
 
 
 .Features ul li{
     padding: 4px;
     font-size: 17px;
+    margin-left: 5px;
 }
 .about-property p{
     font-size: 18px;
@@ -219,6 +226,9 @@ a{
     text-align: center;
 }
 @media (max-width: 768px) {
+    body{
+        font-size: 15px;
+    }
     #scrollToTopBtn {
         bottom: 10px; /* Place the button 20px from the bottom */
         right: 20px;
