--- a/backend/reactdjango/static/rentaldetails.css
+++ b/backend/reactdjango/static/rentaldetails.css
@@ -90,9 +90,12 @@
     max-width: 100%;
     height: 300px;
 }
+.dark-mode .about{
+    background-color: rgb(32, 31, 31);
+}
 .about{
     margin-top: 10px;
-    background-color: rgb(10, 8, 20);
+    background-color:  rgb(7, 4, 19);
     width: 100%;
     border-radius: 3px;
 }
@@ -102,15 +105,19 @@
     margin-right: auto;
     color: white;
 }
+.dark-mode .Features{
+    background-color: rgb(32, 31, 31);
+}
 .Features{
-    width: 90%;
-    margin-left: 15px;
+    width: 100%;
+   
+    font-size: 17px;
 }
 
 
 .Features ul li{
     padding: 4px;
-    font-size: 17px;
+    
 }
 .about-house p{
     font-size: 18px;
@@ -147,14 +154,16 @@
     margin-top: 10px;
 }
 .houses-container{
-    background-color: white;
     width: 24%;
     display: inline-block;
     border-top-left-radius: 5px; /* Adjust the radius value as needed */
     border-top-right-radius: 5px;
     margin-bottom: 5px;
     margin-right: 5px;
-    border: 1px solid rgb(6, 5, 12);;
+    box-shadow:  5px 0 5px rgba(0, 0, 0, 0.5),
+                 0 -5px 5px rgba(0, 0, 0, 0.5), /* Top side */
+                 0 5px 5px rgba(0, 0, 0, 0.5); /* Bottom side */
+                 /* -5px 0 5px rgba(0, 0, 0, 0.5), Left side  left*/
    
 }
 .photo {
@@ -222,6 +231,9 @@ a{
 
 
 @media (max-width: 768px) {
+    body{
+        font-size: 15px;
+    }
     .main-container{
         width: 100%;
         margin-top: 53px;
