--- a/backend/reactdjango/static/searchrental.css
+++ b/backend/reactdjango/static/searchrental.css
@@ -33,17 +33,22 @@ a.dark-mode {
     margin-bottom: 5px;
     margin-right: 5px;
     vertical-align: top;
+    box-shadow:  3px 0 3px rgba(0, 0, 0, 0.5),/* right */
+    /* 0 -5px 5px rgba(0, 0, 0, 0.5), Top side */
+    0 3px 3px rgba(0, 0, 0, 0.5); /* Bottom side */
+    /* -5px 0 5px rgba(0, 0, 0, 0.5), Left side  left*/
 }
 .photo {
     width: 100%;
     height: 200px;
     overflow: hidden;
+    position: relative;
 }
 
 .photo img{
     width: 100%;
-    max-heidght: 100%;
-    object-fjit: cover;
+    height: 100%;
+    object-fit: cover;
 }
 
 .details{
@@ -86,6 +91,9 @@ p{
   }
 
 @media (max-width: 768px) {
+    body{
+        font-size: 15px;
+    }
     .main-container{
         width: 100%;
     }
