--- a/backend/reactdjango/templates/search_property_on_sale.html
+++ b/backend/reactdjango/templates/search_property_on_sale.html
@@ -20,7 +20,7 @@
         <div class="property-container">
         
             <div class="photo">
-                 <img src="{{property.photos.url}}">
+                 <img src="{{property.main_photo.url}}">
             </div>
             <div class="details">
                  <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{property.location}}</p>
