--- a/backend/reactdjango/templates/rentaldetails.html
+++ b/backend/reactdjango/templates/rentaldetails.html
@@ -71,6 +71,7 @@
             <div class="about-house">
                 <p>House type : {{rental.size}}</p>
                 <p>Location :  {{rental.location}}</p>
+                 <p>Apartment Name : {{rental.apartment_name}}</p>
                 <p>Rent per month : ksh {{rental.price|intcomma }}</p>
                 <p>Deposit : {{rental.deposit|intcomma }}</p>
                 <p>Water cost : {{rental.water_fee}}</p>
