--- a/backend/reactdjango/templates/register.html
+++ b/backend/reactdjango/templates/register.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'register.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>register</title>
 
 </head>
@@ -28,11 +31,26 @@
                         <input type="password" name="password1" placeholder="input password" required >
                    
                         <input type="password" name="password2" placeholder="confirm password" required> 
-                 
+
+                        <p style="text-align: center; width: 90%;
+                        ">
+                            Please read 
+                            <a href="#" id="terms-link">our terms</a>
+                            and accept to proceed with registration.
+                        </p>
+
+                         <div class="checkbox">
+                            <label for="checkbox"> I accept </label>
+                            <input type="checkbox" required>
+                         </div>
+                        
                         <input type="submit" value="regiter">
                 </form>  
+
+                
+               
             </div>
-    
+           
             {% for message in messages %}
             <h4 class="{% if message.tags == 'error' %}message-error{% elif message.tags == 'success' %}message-success{% endif %}">
                     {{ message }}
@@ -47,6 +65,36 @@
             </div>
        
     </div>  
+
+    <!-- <div id="terms-popup">
+        <div class="terms-content">
+            <h2>
+                Terms and Conditions for landlords
+            </h2>
+        
+            <ol>
+                <li>This is a contract between you and J.C.L company</li>
+                <li>J.C.L will always show your property as long as your subscription is valid.</li>
+                <li>A subscription is valid when J.C.L receives payment of Ksh 5,100 per house type per year per location.</li>
+                <li>Your MPESA phone number is also your J.C.L account number.
+                    If your MPESA number changes, you must inform J.C.L to make changes.</li>
+                <li>We do not accept any other mode of payment than MPESA to our Pay Bill number.</li>
+                <li>J.C.L shall not accept responsibility for any money lost due to violating condition <b>#5</b>.</li>
+                <li>J.C.L will be committed to ensure everyone searching your property has seen it.</li>
+                <li>You can post as many photos of your property on our website. Editing the house description is also possible at your convenient</li>
+                <li>You can ask questions, place complaints and give compliments to J.C.L through the mobile number provided.
+                </li>
+                 <div id="times">
+                    <span><i class="fa fa-times" aria-hidden="true"></i></span>
+                 </div>
+                
+            </ol>
+            
+        </div>
+       
+    </div>
+</div> -->
+    <script src="{% static 't&c.js' %}"></script>
                
 </body>
 </html>
